--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.0",
-    "lucide-react": "^0.475.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.10",
     "next": "15.1.6",
+    "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
