--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@directus/sdk": "^19.1.0",
     "@hookform/resolvers": "^4.1.0",
+    "@tanstack/react-query": "^5.72.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
-    "next": "15.1.6",
+    "next": "^15.2.4",
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
+    "swiper": "^11.2.6",
     "zod": "^3.24.2"
   },
   "devDependencies": {
