--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.72.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
+    "jiti": "^2.4.2",
     "next": "^15.2.4",
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/eslint__eslintrc": "^2.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
