--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jiti": "^2.4.2",
     "negotiator": "^1.0.0",
     "next": "^15.2.4",
+    "nodemailer": "^6.10.1",
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
