--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/eslint__eslintrc": "^2.1.2",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
