--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@directus/sdk": "^19.1.0",
     "@formatjs/intl-localematcher": "^0.6.1",
-    "@hookform/resolvers": "^4.1.0",
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.72.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.4.10",
     "jiti": "^2.4.2",
     "lucide-react": "^0.510.0",
@@ -27,11 +29,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.57.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.25.49"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
