--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@directus/sdk": "^19.1.0",
     "@formatjs/intl-localematcher": "^0.6.1",
     "@hookform/resolvers": "^4.1.3",
+    "@next/third-parties": "^15.4.3",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.3",
