--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@directus/sdk": "^19.1.0",
     "@formatjs/intl-localematcher": "^0.6.1",
     "@hookform/resolvers": "^4.1.3",
-    "@next/third-parties": "^15.4.3",
+    "@next/third-parties": "16.1.0-canary.22",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.3",
@@ -25,11 +25,11 @@
     "jiti": "^2.4.2",
     "lucide-react": "^0.510.0",
     "negotiator": "^1.0.0",
-    "next": "^15.2.4",
+    "next": "16.1.0-canary.22",
     "nodemailer": "^6.10.1",
     "phosphor-react": "^1.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.57.0",
     "swiper": "^11.2.6",
@@ -43,12 +43,16 @@
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "16.1.0-canary.22",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
