--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@directus/sdk": "^19.1.0",
     "@formatjs/intl-localematcher": "^0.6.1",
     "@hookform/resolvers": "^4.1.3",
-    "@next/third-parties": "16.1.0-canary.22",
+    "@next/third-parties": "16.1.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.3",
@@ -25,7 +25,7 @@
     "jiti": "^2.4.2",
     "lucide-react": "^0.510.0",
     "negotiator": "^1.0.0",
-    "next": "16.1.0-canary.22",
+    "next": "16.1.0",
     "nodemailer": "^6.10.1",
     "phosphor-react": "^1.4.1",
     "react": "19.2.3",
@@ -46,7 +46,7 @@
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.1.0-canary.22",
+    "eslint-config-next": "16.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
